# Odoo-SynergySphere

./: .gitignore  README.md
src/backend/: pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 515bf93f8218_add_auth_fields_to_users.py  b0c59d8b9b84_init_schema.py
src/backend/app/: main.py
src/backend/app/api/routers/: analytics.py  auth.py  demo.py  health.py  members.py  messages.py  projects.py  tasks.py
src/backend/app/core/: config.py  security.py
src/backend/app/db/: base.py  session.py
src/backend/app/models/: __init__.py  comment.py  events.py  membership.py  project.py  task.py  thread.py  user.py
src/backend/app/scripts/: seed.py
src/frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/app/analytics/: page.tsx
src/frontend/app/auth/: page.tsx
src/frontend/app/projects/[id]/: page.tsx
src/frontend/app/settings/: page.tsx
src/frontend/app/team/: page.tsx
src/frontend/components/: auth-page.tsx  auth-provider.tsx  dashboard.tsx  notification-dropdown.tsx  notification-provider.tsx  project-detail.tsx
src/frontend/hooks/: use-logout.ts
src/frontend/lib/: api.ts  auth.ts  members.ts  projects.ts  tasks.ts
